# launchpadlib-rs

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  deny.toml  disperse.conf  disperse.toml  fixup.xsl
.github/workflows/: rust.yml
examples/: auth.rs  get-person.rs  keyring.rs  ssh-keys.rs
src/: auth.rs  client.rs  lib.rs  page.rs  tests.rs  uris.rs
src/async/: client.rs  mod.rs  page.rs
src/blocking/: client.rs  mod.rs  page.rs
testdata/: bug.json  bug2.json  bug_tasks.json  person.json  project-launchpad.json  project_full.json  team-ubuntu-security.json  team.json  team2.json
wadl/: 1.0.wadl  beta.wadl  devel.wadl
