[package]
name = "launchpadlib"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/jelmer/launchpadlib-rs"
readme = "README.md"
description = "Rust library for accessing Launchpad.net"
keywords = ["launchpad", "api", "rust"]
categories = ["network-programming", "asynchronous", "api-bindings"]
authors = ["Jelmer Vernooĳ <jelmer@jelmer.uk>"]
build = "build.rs"
include = ["wadl/*.wadl", "src/*.rs", "src/bin/*.rs", "build.rs", "examples/*.rs", "testdata/*"]

[lib]

[workspace.dependencies]
# wadl = { version = "0.3.0", default-features = false }
wadl = { path = "../wadl-rs", default-features = false }

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
debversion = { version = "0.4.3", features = ["serde"] }
form_urlencoded = "1.2.1"
lazy_static = "1.5.0"
log = "0.4"
mime = "0.3.17"
percent-encoding = "2.3.1"
rand = "0.8.5"
reqwest = { version = "0.12", features = ["json", "blocking", "multipart"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
url = { version = "2.5.2", features = ["serde"] }
wadl = { workspace = true }
clap = { version = "4", features = ["derive"], optional = true }
keyring = { version = "3.3.0", optional = true }
async-trait = { version = "0.1", optional = true }

[build-dependencies]
wadl = { workspace = true, features = ["codegen"] }
reqwest = { version = "0.12", features = ["blocking"] }

[dev-dependencies]
maplit = "1.0.2"
tokio = { version = "1", features = ["full"] }

[features]
default = ["api-v1_0"]
api-v1_0 = []
api-devel = []
api-beta = []
cli = ["dep:clap"]
keyring = ["dep:keyring"]
async = ["wadl/async", "dep:async-trait"]

[[example]]
required-features = ["api-v1_0"]
name = "auth"

[[example]]
required-features = ["api-v1_0"]
name = "ssh-keys"

[[bin]]
required-features = ["api-v1_0", "cli"]
name = "lp-attach"

[[bin]]
required-features = ["api-v1_0", "cli"]
name = "lp-set-dupe"

[[bin]]
required-features = ["api-v1_0", "cli"]
name = "lp-list-bugs"

[[bin]]
required-features = ["api-v1_0", "cli"]
name = "lp-check-membership"

[package.metadata.cargo-all-features]
max_combination_size = 2
